<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.aguitech.compartetuexperiencia.MainActivity" >
    <item android:id="@+id/action_home"
        android:title="@string/action_home"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_blog"
        android:title="@string/action_blog"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_eventos"
        android:title="@string/action_eventos"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_trivias"
        android:title="@string/action_trivias"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_terminos_condiciones"
        android:title="@string/action_terminos_condiciones"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_aviso_privacidad"
        android:title="@string/action_aviso_privacidad"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
